--- a/src/index.css
+++ b/src/index.css
@@ -39,7 +39,7 @@ body {
 
 /* Landing Page */
 .landing-image {
-  background: url('http://www.bestfon.info/images/joomgallery/originals/coches_1/coche_166_20120509_1866664784.jpg') no-repeat center fixed;
+  background: url('https://images.unsplash.com/photo-1516236959620-057556c2361e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1548&q=80') no-repeat center fixed;
   height:100vh;
 }
 
